--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,13 @@
     <string name="register_title_text">Регистрация</string>
     <string name="register_btn_text">Зарегистрироваться</string>
     <string name="back_to_login">Войти в аккаунт</string>
+    <string name="error_empty_field">Пустая строка</string>
+    <string name="error_user_not_found">Пользователь не найден</string>
+    <string name="error_invalid_pass_or_email">Не верный пароль или почта</string>
+    <string name="error_empty_password_repeat">Повторите пароль</string>
+    <string name="error_empty_password">Введите пароль</string>
+    <string name="error_empty_email">Введите электронную почту</string>
+    <string name="error_weak_password">Ваш пароль ненадежен</string>
+    <string name="error_password_mismatch">Ваши пароли разные</string>
+    <string name="city_name">Алматы</string>
 </resources>
