> final commit (last one was not 99% xD)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,7 @@
     <string name="error_empty_password">Введите пароль</string>
     <string name="error_empty_email">Введите электронную почту</string>
     <string name="error_weak_password">Ваш пароль ненадежен</string>
+    <string name="error_weak_password_letters">Ваш пароль должен содержать заглавные буквы</string>
     <string name="error_password_mismatch">Ваши пароли разные</string>
     <string name="city_name">Алматы</string>
 </resources>
